Small fixes and renaming

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
             <!--LOOP OVER THE rewards IN $scope.rewards-->
             <div class="checkbox" ng-repeat="reward in rewards">
                 <label>
-                    <input type="checkbox" ng-click="deleteReward(rewards._id)"> {{rewards.text}} is worth {{rewards.points}}
+                    <input type="checkbox" ng-click="deleteReward(rewards._id)"> {{rewards.text}} costs {{rewards.cost}}
                 </label>
             </div>
         </div>
